fix: wrap-instructor-info css to correctly display staff buttons on Show Answer

--- a/src/ol_openedx_chat/ol_openedx_chat/static/css/ai_chat.css
+++ b/src/ol_openedx_chat/ol_openedx_chat/static/css/ai_chat.css
@@ -113,3 +113,13 @@
 .video {
     margin: 0 0;
 }
+
+@media (min-width: 768px) {
+  .wrap-instructor-info {
+    display: flex !important;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    flex-shrink: 0;
+  }
+}
